# qtl-power

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
docs/: .buildinfo  api.rst  changelog.html  conf.py  contributing.html  contributing.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  introduction.html  introduction.rst  modules.html  modules.rst  objects.inv  py-modindex.html  qtl_power.html  requirements.txt  search.html  searchindex.js  testing.html  testing.rst
docs/_sources/: installation.rst.txt  modules.rst.txt  qtl_power.rst.txt  testing.rst.txt
docs/_sources/stubs/: extreme_pheno.rst.txt  gwas.rst.txt  rare_variants.rst.txt
docs/_static/: documentation_options.js
docs/source/: modules.rst  qtl_power.rst
docs/source/_static/: custom.css
docs/source/_templates/: footer.html  layout.html
docs/stubs/: extreme_pheno.html  gwas.html  rare_variants.html
docsrc/: Makefile  conf.py  installation.rst  introduction.rst
notebooks/: gwas_power.ipynb  power_qtl.ipynb  qc_power.ipynb  rare_variant_power.ipynb  rare_variant_tests.ipynb
qtl_power/: __init__.py  extreme_pheno.py  gwas.py  lmm.py  rare_variants.py
tests/: __init__.py  test_extreme_pheno.py  test_gwas.py  test_lmm.py  test_rare_variants.py
utils/: extract_AF_gnomAD.sh
