[build-system]
requires = [
    "setuptools>=62",
    "wheel",
    "scipy",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "qtl-power"
description = "\"Power calculations for GWAS study design.\""
keywords = ["genetics", "GWAS"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
requires-python = ">= 3.9"
dependencies = ["numpy", "scipy"]
dynamic = ["version"]
authors = [{name = "Arjun Biddanda", email = "aabiddanda@gmail.com"}]

[project.optional-dependencies]
tests = [ "pytest", "pytest-cov", "hypothesis", "flake8", "sphinx"]

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE.txt"]
include-package-data = false

[tool.setuptools.package-data]
qtl_power = [ "panukbb_30760.hdl_cholesterol.afr_filt.tsv.gz", "panukbb_30760.hdl_cholesterol.eur_filt.tsv.gz" ]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "qtl_power.__version__"
