[metadata]
name = qtl-power
author = Arjun Biddanda
author_email = arjun.biddanda@54gene.com
description = Library for GWAS/QTL Power calculations
version = attr: qtl_power.__version__
url = https://gitlab.com/data-analysis5/qtl-power
keywords =
  cool printing
  networking
classifiers =
  Development Status :: Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific
#license_files =
  #LICENSE.txt

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
   numpy
   scipy
   matplotlib

[options.extras_require]
tests =
  pytest
  pytest-cov
  flake8
  sphinx
