[metadata]
name = qtl-power
author = Arjun Biddanda
author_email = abiddan1@jhu.edu 
description = Library for GWAS/QTL Power calculations
version = attr: qtl_power.__version__
keywords =
  cool printing
  networking
classifiers =
  Development Status :: Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
   numpy
   scipy
   pandas
   matplotlib

[options.package_data]
qtl_power =
  panukbb_30760.hdl_cholesterol.afr_filt.tsv.gz
  panukbb_30760.hdl_cholesterol.eur_filt.tsv.gz

[options.extras_require]
tests =
  pytest
  pytest-cov
  hypothesis
  flake8
  sphinx
